# StageLAB

I2C Scan/main/: CMakeCache.txt  CMakeLists.txt  main.c
KBD Scan/main/: CMakeLists.txt  main.c
KBD Scan/main/scan_kbd/: scan_kbd.c  scan_kbd.h
check/main/: CMakeLists.txt  main.c
check/main/DFPlayerMini/: df.h
codec_TLV320AIC3104/main/: CMakeLists.txt  main.cpp
max7219/main/: CMakeLists.txt  main.c
max7219/main/led_lib/: led.c  led.h
ne_test/main/: CMakeLists.txt  main.cpp
test/main/: CMakeLists.txt  main.cpp
test_cmake_example/main/: CMakeLists.txt  main.c
zoner_pro_88a/main/: CMakeLists.txt  main.cpp
